@@ -79,6 +79,10 @@ SCM_ORD_SIG, SCM_NUM_SIGS
 Use SCM_ASSERT_RANGE or SCM_VALIDATE_XXX_RANGE instead of SCM_OUTOFRANGE.
 Use scm_memory_error instead of SCM_NALLOC.
 
+** Deprecated function:  scm_call_catching_errors
+
+Use scm_catch or scm_lazy_catch from throw.[ch] instead.
+
 
 Changes since Guile 1.3.4:
 
